--- a/aopexam/pom.xml
+++ b/aopexam/pom.xml
@@ -20,7 +20,7 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>${aspectj-version}</version>	
-			<scope>runtime</scope>		
+			<!-- <scope>runtime</scope>	 -->	
 		</dependency>
 
 		<dependency>
